# TOAST

./: .gitignore  =5  README.md  pyproject.toml
cache/: lineage_specific_snp.xlsx  mmc2.xlsx  redesignLin.xlsx  scratch.ipynb  scratch1.ipynb  test.bed
cache/Amplicon_design_output/Amplicon_design_output/: Amplicon_mapped-2-400.bed  Primer_design-accepted_primers-1-400.csv  Primer_design-accepted_primers-2-400-sp.csv  SNP_inclusion-1-400.csv
cache/Amplicon_design_output_seg/Amplicon_design_output/: Amplicon_importance-3-700_800_50_1.csv  Amplicon_importance-5-400_800_100_1.csv  Amplicon_mapped-3-700_800_50_1.bed  Amplicon_mapped-5-400_800_100_1.bed  Gene_coverage-3-700_800_50_1.csv  Primer_design-accepted_primers-18-400_800_50_2.csv  Primer_design-accepted_primers-3-700_800_50_1.csv  Primer_design-accepted_primers-5-400_800_100_1.csv  SNP_inclusion-3-700_800_50_1.csv  SNP_inclusion-5-400_800_100_1.csv
cache/Amplicon_design_output_seg1/Amplicon_design_output/: Amplicon_importance-18-400_800_50_2.csv  Amplicon_importance-27-400_800_50_3.csv  Amplicon_importance-9-400_800_50_1.csv  Amplicon_mapped-18-400_800_50_2.bed  Amplicon_mapped-27-400_800_50_3.bed  Amplicon_mapped-9-400_800_50_1.bed  SNP_inclusion-9-400_800_50_1.csv  (+5 more)
code/: Amplicon_no.py  Thermo.py  main.py  plotting1.py  primer_selection.py  test.xlsx  working_algo_gene_2in1.py
toast/: Amplicon_no.py  main.py  main_differing_amplicon_func.py  plotting1.py  primer_selection copy.py  primer_selection.py  scratch.ipynb  working_algo_gene_2in1.py
toast/db/: default_primer_design_setting.json  spoligo_primers.bed
(+6 files in other folders)
